# calcite

./: .gitignore  CLAUDE.md  README.md  css-compute-engine-spec-v2-1.md  render-screen.py  run-fib.bat  run-zork.bat  run.bat
crates/calcify-cli/src/: main.rs
crates/calcify-core/: Cargo.toml
crates/calcify-core/benches/: x86css.rs
crates/calcify-core/src/: compile.rs  conformance.rs  error.rs  eval.rs  lib.rs  state.rs  types.rs
crates/calcify-core/src/parser/: css_functions.rs  stylesheet.rs
crates/calcify-core/src/pattern/: broadcast_write.rs  dispatch_table.rs
crates/calcify-core/tests/: integration.rs
crates/calcite-cli/src/: main.rs
crates/calcite-core/src/: compile.rs  eval.rs  lib.rs  state.rs
crates/calcite-core/src/parser/: css_functions.rs
crates/calcite-core/src/pattern/: broadcast_write.rs
crates/calcite-core/tests/: integration.rs
crates/calcite-debugger/: Cargo.toml
crates/calcite-debugger/src/: main.rs
crates/calcite-wasm/src/: lib.rs
docs/: conformance-testing.md  debugger.md
programs/: fib.com  linkfour.com  monosol.com  row4.com  shell.asm
programs/ftetris/: F-TETRIS.CFG
site/: css-screen.css  index.html  program.html  style.css
tools/: codebug.mjs  compare.mjs  diagnose.mjs  fulldiff.mjs  ref-dos.mjs
web/: calcite-worker.js  demo.css  index.html
x86css-mw/: README.md  base_template.html  build_css.py  x86css.html
