[package]
name = "calcite-debugger"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP debug server for calcite — step, inspect, compare CSS execution"

[dependencies]
calcite-core = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
